chore: add jacoco for test report test: replenish aop, server fix: server configuration, aop cache, beanPostProcessor initialization point